---
source: src/tests/code_samples/mod.rs
assertion_line: 13
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "fibonacci",
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 15,
        },
    },
    PositionedToken {
        token: Function,
        position: Position {
            line: 1,
            column: 17,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 1,
            column: 19,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "x",
        },
        position: Position {
            line: 1,
            column: 20,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 1,
            column: 21,
        },
    },
    PositionedToken {
        token: OpeningCurlyBracket,
        position: Position {
            line: 1,
            column: 23,
        },
    },
    PositionedToken {
        token: If,
        position: Position {
            line: 2,
            column: 3,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 2,
            column: 6,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "x",
        },
        position: Position {
            line: 2,
            column: 7,
        },
    },
    PositionedToken {
        token: Equals,
        position: Position {
            line: 2,
            column: 9,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 0,
        },
        position: Position {
            line: 2,
            column: 12,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 2,
            column: 13,
        },
    },
    PositionedToken {
        token: OpeningCurlyBracket,
        position: Position {
            line: 2,
            column: 15,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 0,
        },
        position: Position {
            line: 3,
            column: 5,
        },
    },
    PositionedToken {
        token: ClosingCurlyBracket,
        position: Position {
            line: 4,
            column: 3,
        },
    },
    PositionedToken {
        token: Else,
        position: Position {
            line: 4,
            column: 5,
        },
    },
    PositionedToken {
        token: OpeningCurlyBracket,
        position: Position {
            line: 4,
            column: 10,
        },
    },
    PositionedToken {
        token: If,
        position: Position {
            line: 5,
            column: 5,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 5,
            column: 8,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "x",
        },
        position: Position {
            line: 5,
            column: 9,
        },
    },
    PositionedToken {
        token: Equals,
        position: Position {
            line: 5,
            column: 11,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 1,
        },
        position: Position {
            line: 5,
            column: 14,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 5,
            column: 15,
        },
    },
    PositionedToken {
        token: OpeningCurlyBracket,
        position: Position {
            line: 5,
            column: 17,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 1,
        },
        position: Position {
            line: 6,
            column: 7,
        },
    },
    PositionedToken {
        token: ClosingCurlyBracket,
        position: Position {
            line: 7,
            column: 5,
        },
    },
    PositionedToken {
        token: Else,
        position: Position {
            line: 7,
            column: 7,
        },
    },
    PositionedToken {
        token: OpeningCurlyBracket,
        position: Position {
            line: 7,
            column: 12,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "fibonacci",
        },
        position: Position {
            line: 8,
            column: 7,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 8,
            column: 16,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "x",
        },
        position: Position {
            line: 8,
            column: 17,
        },
    },
    PositionedToken {
        token: Minus,
        position: Position {
            line: 8,
            column: 19,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 1,
        },
        position: Position {
            line: 8,
            column: 21,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 8,
            column: 22,
        },
    },
    PositionedToken {
        token: Plus,
        position: Position {
            line: 8,
            column: 24,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "fibonacci",
        },
        position: Position {
            line: 8,
            column: 26,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 8,
            column: 35,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "x",
        },
        position: Position {
            line: 8,
            column: 36,
        },
    },
    PositionedToken {
        token: Minus,
        position: Position {
            line: 8,
            column: 38,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 2,
        },
        position: Position {
            line: 8,
            column: 40,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 8,
            column: 41,
        },
    },
    PositionedToken {
        token: ClosingCurlyBracket,
        position: Position {
            line: 9,
            column: 5,
        },
    },
    PositionedToken {
        token: ClosingCurlyBracket,
        position: Position {
            line: 10,
            column: 3,
        },
    },
    PositionedToken {
        token: ClosingCurlyBracket,
        position: Position {
            line: 11,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "fibonacci",
        },
        position: Position {
            line: 13,
            column: 1,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 13,
            column: 10,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 9,
        },
        position: Position {
            line: 13,
            column: 11,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 13,
            column: 12,
        },
    },
]
